alignment fixed

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     height: 60vh;
 }
 
+#insight {
+    color:hsl(277, 64%, 61%);
+}
+
 .card {
     background-color: hsl(244, 38%, 16%);
     display: flex;
@@ -83,7 +87,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
     }
     .right-section img{
         width: 100%;
